force-app/main/default/objects/Partner_Evaluation__c/Partner_Evaluation__c.object-meta.xml
<CustomObject>
    <description>Used to track and evaluate partnerships at various stages.</description>
    <label>Partner Evaluation</label>
    <nameField>
        <label>Partner Evaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>