force-app/main/default/objects/Partner_Evaluation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Account that the evaluation is related to.</description>
    <inlineHelpText>Partner Account that the evaluation is related to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Evaluations</relationshipLabel>
    <relationshipName>Partner_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>