force-app/main/default/objects/Partner_Evaluation__c/fields/Dedicated_Servicing_Team__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Servicing_Team__c</fullName>
    <description>Does this partner have a dedicated servicing team at Ubiquity?</description>
    <inlineHelpText>Does this partner have a dedicated servicing team at Ubiquity?</inlineHelpText>
    <label>Dedicated Servicing Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>