force-app/main/default/objects/Partner_Evaluation__c/fields/End_Date_of_Forecasted_Expectations__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Forecasted_Expectations__c</fullName>
    <description>The end date of the quarter being forecasted by Ubiquity and given partner.</description>
    <inlineHelpText>The end date of the quarter being forecasted by Ubiquity and given partner.</inlineHelpText>
    <label>End Date of Forecasted Expectations</label>
    <type>Date</type>
</CustomField>