force-app/main/default/objects/Partner_Evaluation__c/fields/Estimated_Average_Price_of_Plans_Sold__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Average_Price_of_Plans_Sold__c</fullName>
    <description>Rough estimate of the average price of the plans to be sold by this partner.</description>
    <inlineHelpText>Rough estimate of the average price of the plans to be sold by this partner.</inlineHelpText>
    <label>Estimated Average Price of Plans Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>