force-app/main/default/objects/Partner_Evaluation__c/fields/Exclusive_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this partnership an exclusive relationship where Ubiquity is there sole 401(k) provider offered?</description>
    <inlineHelpText>Is this partnership an exclusive relationship where Ubiquity is there sole 401(k) provider offered?</inlineHelpText>
    <label>Exclusive Relationship</label>
    <type>Checkbox</type>
</CustomField>