force-app/main/default/objects/Partner_Evaluation__c/fields/Lead_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Attainment__c</fullName>
    <description>Leads delivered in forecasted period compared to Ubiquity Lead expectations</description>
    <formula>Leads__c /Ubiquity_Lead_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Leads delivered in forecasted period compared to Ubiquity Lead expectations</inlineHelpText>
    <label>Lead Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>