force-app/main/default/objects/Partner_Evaluation__c/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <description>Leads delivered in Forecast Period</description>
    <inlineHelpText>Leads delivered in Forecast Period</inlineHelpText>
    <label>Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>