force-app/main/default/objects/Partner_Evaluation__c/fields/Leads_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Leads_to_Date__c</fullName>
    <description>Number of leads submitted by Partner in the last year.</description>
    <inlineHelpText>Number of leads submitted by Partner in the last year.</inlineHelpText>
    <label>Leads in Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>