force-app/main/default/objects/Partner_Evaluation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any and all notes regarding this Partner Evaluation.</description>
    <inlineHelpText>Any and all notes regarding this Partner Evaluation.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>