force-app/main/default/objects/Partner_Evaluation__c/fields/Number_Of_Current_Mutual_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Current_Mutual_Clients__c</fullName>
    <description>Number of current mutual clients with partner at time of the evaluation.</description>
    <inlineHelpText>Number of current mutual clients with partner at time of the evaluation.</inlineHelpText>
    <label>Number Of Current Mutual Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>