force-app/main/default/objects/Partner_Evaluation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity associated with this Partner Evaluation.</description>
    <inlineHelpText>Opportunity associated with this Partner Evaluation.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partner Evaluations</relationshipLabel>
    <relationshipName>Partner_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>