force-app/main/default/objects/Partner_Evaluation__c/fields/Paradigm_RKS__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_RKS__c</fullName>
    <description>Is Paradigm RKS and related technology performing in an adequate way to support this partnership? If there are issues please add in the notes section.</description>
    <inlineHelpText>Is Paradigm RKS and related technology performing in an adequate way to support this partnership? If there are issues please add in the notes section.</inlineHelpText>
    <label>Paradigm RKS Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Working Perfectly</fullName>
            </value>
            <value>
                <fullName>Minor Issues</fullName>
            </value>
            <value>
                <fullName>Major Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>