force-app/main/default/objects/Partner_Evaluation__c/fields/Partner_Revenue_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Partner_Revenue_Expectations__c</fullName>
    <description>Partner Sales Expectations multiplied by the estimated average price of the plans sold.</description>
    <formula>Partner_Sales_Expectations__c *  Estimated_Average_Price_of_Plans_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Partner Sales Expectations multiplied by the estimated average price of the plans sold.</inlineHelpText>
    <label>Partner Revenue Expectations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>