force-app/main/default/objects/Partner_Evaluation__c/fields/Partner_Sales_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Expectations__c</fullName>
    <description>Number of sales the partner strives to deliver in the next quarter of business to consider this partnership successful. This should be the partners measure of success not Ubiquity&apos;s.</description>
    <inlineHelpText>Number of sales the partner strives to deliver in the next quarter of business to consider this partnership successful. This should be the partners measure of success not Ubiquity&apos;s.</inlineHelpText>
    <label>Partner Sales Expectations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>