force-app/main/default/objects/Partner_Evaluation__c/fields/Partner_Servicing_Rating__c.field-meta.xml
<CustomField>
    <fullName>Partner_Servicing_Rating__c</fullName>
    <description>If there are mutual clients with partner, are the Ubiquity servicing teams delivering the level of service expected by the partner?</description>
    <inlineHelpText>If there are mutual clients with partner, are the Ubiquity servicing teams delivering the level of service expected by the partner?</inlineHelpText>
    <label>Partner Servicing Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>