force-app/main/default/objects/Partner_Evaluation__c/fields/Partnership_Health__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Health__c</fullName>
    <description>Business Developments perceived overall health of the partnership being evaluated.</description>
    <inlineHelpText>Business Developments perceived overall health of the partnership being evaluated.</inlineHelpText>
    <label>Partnership Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Mediocore</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>