force-app/main/default/objects/Partner_Evaluation__c/fields/Partnership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Start_Date__c</fullName>
    <description>Either the date the partnership first started delivering leads or the expected date for the partnership to start delivering leads.</description>
    <inlineHelpText>Either the date the partnership first started delivering leads or the expected date for the partnership to start delivering leads.</inlineHelpText>
    <label>Partnership Start Date</label>
    <type>Date</type>
</CustomField>