force-app/main/default/objects/Partner_Evaluation__c/fields/Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Status__c</fullName>
    <description>What is the current Status of this Partnership?</description>
    <inlineHelpText>What is the current Status of this Partnership?</inlineHelpText>
    <label>Partnership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active Lead Gen</fullName>
            </value>
            <value>
                <fullName>Active Lead Gen w/ Mutual Clients</fullName>
            </value>
            <value>
                <fullName>Inactive Lead Gen w/ Mutual Clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>