force-app/main/default/objects/Partner_Evaluation__c/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <description>What type of partnership is this? Select all that apply.</description>
    <inlineHelpText>What type of partnership is this? Select all that apply.</inlineHelpText>
    <label>Partnership Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>