force-app/main/default/objects/Partner_Evaluation__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Revenue generated by partner thus far in forecast period.</description>
    <inlineHelpText>Revenue generated by partner thus far in forecast period.</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>