force-app/main/default/objects/Partner_Evaluation__c/fields/Revenue_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Attainment__c</fullName>
    <description>Revenue delivered in forecasted period compared to Ubiquity revenue expectations</description>
    <formula>Revenue__c / Ubiquity_Revenue_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revenue delivered in forecasted period compared to Ubiquity revenue expectations</inlineHelpText>
    <label>Revenue Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>