force-app/main/default/objects/Partner_Evaluation__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <description>Number of sales that have occurred in forecast period</description>
    <inlineHelpText>Number of sales that have occurred in forecast period</inlineHelpText>
    <label>Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>