force-app/main/default/objects/Partner_Evaluation__c/fields/Sales_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Attainment__c</fullName>
    <description>Sales delivered in forecasted period compared to Ubiquity Sales expectations</description>
    <formula>Sales__c / Ubiquity_Sales_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales delivered in forecasted period compared to Ubiquity Sales expectations</inlineHelpText>
    <label>Sales Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>