force-app/main/default/objects/Partner_Evaluation__c/fields/Start_Date_of_Forecasted_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Forecasted_Expectations__c</fullName>
    <description>The start date of the quarter being forecasted by Ubiquity and given partner. Please use quarter start dates the correspond with Ubiquity&apos;s fiscal year (1/1, 4/1, 7/1, &amp; 10/1).</description>
    <inlineHelpText>The start date of the quarter being forecasted by Ubiquity and given partner. Please use quarter start dates the correspond with Ubiquity&apos;s fiscal year (1/1, 4/1, 7/1, &amp; 10/1).</inlineHelpText>
    <label>Start Date of Forecasted Expectations</label>
    <type>Date</type>
</CustomField>