force-app/main/default/objects/Partner_Evaluation__c/fields/Type_of_Plans_Being_Sold_by_Partner__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Plans_Being_Sold_by_Partner__c</fullName>
    <description>What type of plans (Service Option) does the partner expect to sell?</description>
    <inlineHelpText>What type of plans (Service Option) does the partner expect to sell?</inlineHelpText>
    <label>Type of Plans Being Sold by Partner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>All 401(k)</fullName>
            </value>
            <value>
                <fullName>Custom(k)</fullName>
            </value>
            <value>
                <fullName>Express(k)</fullName>
            </value>
            <value>
                <fullName>Reserve(k)</fullName>
            </value>
            <value>
                <fullName>RKO</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Saver(k)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>