force-app/main/default/objects/Partner_Evaluation__c/fields/Ubiquity_Revenue_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Ubiquity_Revenue_Forecast__c</fullName>
    <description>Ubiquity Sales Forecast multiplied by the estimated average price of the plans sold.</description>
    <formula>Ubiquity_Sales_Forecast__c *  Estimated_Average_Price_of_Plans_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ubiquity Sales Forecast multiplied by the estimated average price of the plans sold.</inlineHelpText>
    <label>Ubiquity Revenue Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>