force-app/main/default/objects/Partner_Evaluation__c/fields/Ubiquity_Sales_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Ubiquity_Sales_Forecast__c</fullName>
    <description>Number of sales Ubiquity forecasted the partner to deliver in the previous quarter of business.</description>
    <inlineHelpText>Number of leads Ubiquity forecasted the partner to deliver in the previous quarter of business.</inlineHelpText>
    <label>Ubiquity Sales Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>