force-app/main/default/objects/Partner_Evaluation__c/recordTypes/Lead_Generating_Partner.recordType-meta.xml
<RecordType>
    <fullName>Lead_Generating_Partner</fullName>
    <active>true</active>
    <description>Use for current or future lead generating partners</description>
    <label>Lead Generating Partner</label>
</RecordType>