force-app/main/default/objects/Partner_Evaluation__c/recordTypes/Non_Lead_Generating_Partner.recordType-meta.xml
<RecordType>
    <fullName>Non_Lead_Generating_Partner</fullName>
    <active>true</active>
    <description>Use for current or future non lead generating partners.</description>
    <label>Non Lead Generating Partner</label>
</RecordType>